--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -12,7 +12,7 @@ jobs:
 
   build:
     if: "!contains(github.event.head_commit.message, 'skip ci')"
-    runs-on: debian:buster-slim
+    runs-on: ubuntu-latest
     
     steps:
       - name: Check out
