--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -203,5 +203,5 @@ jobs:
           region: 'us-east-1'
           access_key: ${{ secrets.AWS_KEY_ID }}
           secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-      - name: Upload the files
+#
+#      - name: Upload the files
