--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -18,7 +18,11 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Find the version
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
+        run: |
+          echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
+          if [[ $RELEASE_VERSION = "refs/heads/master" ]]; then
+            echo "RELEASE_VERSION=testing" >> $GITHUB_ENV
+          fi
 
       - name: Show the discovered version
         run: |
@@ -207,4 +211,15 @@ jobs:
 #
       - name: Upload the files
         run: |
+          if [[ $RELEASE_VERSION =~ "-RC" ]]; then
+            RELEASE_FOLDER=phplist-development
+          else 
+            RELEASE_FOLDER=phplist
+          fi
+
+          sshpass -e sftp -oBatchMode=no -b - ${{ secrets.SF_USERNAME }}@${{ secrets.SF_HOST }} << !
+            cd /home/frs/project/phplist/
+            ls -l $RELEASE_FOLDER
+            bye
+          !
 
