--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Find the version
         run: |
           echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
-          if [[ $RELEASE_VERSION = "refs/heads/master" ]]; then
+          if [[ ${{ env.RELEASE_VERSION }} = "refs/heads/master" ]]; then
             echo "RELEASE_VERSION=testing" >> $GITHUB_ENV
           fi
 
