--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -18,18 +18,16 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Find the version
-        run: |
-          echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
-          if [[ ${{ env.RELEASE_VERSION }} = "refs/heads/master" ]]; then
-            echo "RELEASE_VERSION=testing" >> $GITHUB_ENV
-          fi
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
 
       - name: Show the discovered version
         run: |
-          echo $RELEASE_VERSION
-          echo ${{ env.RELEASE_VERSION }}
-          echo $GITHUB_REF
-          echo ${{ env.GITHUB_REF }}
+          if [[ $RELEASE_VERSION = "refs/heads/master" ]]; then
+            echo "RELEASE_VERSION=testing" >> $GITHUB_ENV
+          fi
+          echo \$RELEASE_VERSION = $RELEASE_VERSION
+          echo \$\{\{ env.RELEASE_VERSION \}\} = ${{ env.RELEASE_VERSION }}
+          echo \$GITHUB_REF = $GITHUB_REF
 
       - name: Set up PHP ${{ matrix.php-version }}
         uses: shivammathur/setup-php@v2
