add the hostkey

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -215,8 +215,9 @@ jobs:
           else 
             RELEASE_FOLDER=phplist
           fi
+          echo ${{ secrets.SF_HOSTKEY }} >> ~/.ssh/known_hosts
 
-          sshpass -e sftp -o 'StrictHostKeyChecking no' -oBatchMode=no -b - ${{ secrets.SF_USERNAME }}@${{ secrets.SF_HOST }} << EOF
+          sshpass -e sftp -oBatchMode=no -b - ${{ secrets.SF_USERNAME }}@${{ secrets.SF_HOST }} << EOF
             cd /home/frs/project/phplist/
             ls -l 
             pwd
