--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -136,7 +136,7 @@ jobs:
           cat public_html/lists/admin/init.php | tr '\n' '\r' | sed 's~//## remove on rollout.*//## end remove on rollout ###~define("VERSION","'${RELEASE_VERSION}'");~' | tr '\r' '\n' > /tmp/$$.init
           mv -f /tmp/$$.init public_html/lists/admin/init.php
           sed -i s~define\(\'STRUCTUREVERSION\'.*~define\(\'STRUCTUREVERSION\',\"${RELEASE_VERSION}\"\)\;~ public_html/lists/admin/structure.php
-          sed -i s/^VERSION=/VERSION=${RELEASE_VERSION}/ VERSION
+          sed -i s/^VERSION=.*/VERSION=${RELEASE_VERSION}/ VERSION
 
           cd ..
           zip -rq9 phplist-${RELEASE_VERSION}.zip phplist-${RELEASE_VERSION}
@@ -216,6 +216,8 @@ jobs:
             RELEASE_FOLDER=phplist
           fi
           echo "${{ secrets.SF_HOSTKEY }}" >> ~/.ssh/known_hosts
+          cd $GITHUB_WORKSPACE
+          cd ..
 
           sshpass -e sftp -oBatchMode=no -b - ${{ secrets.SF_USERNAME }}@${{ secrets.SF_HOST }} << EOF
             cd /home/frs/project/phplist/$RELEASE_FOLDER
