add PHP8.1 experimentally

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,9 @@ jobs:
       matrix:   
         php-version: ['7.2', '7.2', '7.3', '7.4', '8.0']
         experimental: [false]
+        include:
+          - php-version: 8.1
+            experimental: true
 
     steps:
       - uses: actions/checkout@v2
