--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -52,7 +52,7 @@ jobs:
         with:
           dev: yes
           args: --prefer-dist --no-interaction
-          php_version: 7.4
+          php_version: ${{ matrix.php-version }}
           php_extensions: xml 
           version: 2
 
