--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,11 @@ jobs:
     strategy:
       fail-fast: false     
       matrix:   
-        php-version: ['7.2', '7.2', '7.3', '7.4']
+        php-version: ['7.3', '7.4']
         experimental: [false]
         include:
+          - php-version: 7.2
+            experimental: true
           - php-version: 8.0
             experimental: true
           - php-version: 8.1
