--- a/Dockerfile.release
+++ b/Dockerfile.release
@@ -6,7 +6,7 @@ LABEL maintainer="michiel@phplist.com"
 RUN apt-get update && apt-get upgrade -y
 
 RUN apt-get install -y apt-utils \
-    vim apache2 net-tools php-mysql \
+    vim apache2 php-mysql \
     libapache2-mod-php php-curl php-gd \
     git cron php-imap php-xml php-zip php-mbstring
 
@@ -38,7 +38,8 @@ RUN rm -f /etc/apache2/sites-enabled/000-default.conf && \
     find . -type f -print0 | xargs -0 chmod 644
 
 RUN chown -R www-data: /var/www/phpList3
-USER www-data
+
+#USER www-data
 
 EXPOSE 80 
 
