--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Find the version
       #  run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
-        run: echo "RELEASE_VERSION=CI-testbuild-unstable-RC1" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=3.6.6-CI-testbuild-unstable-$$" >> $GITHUB_ENV
 
       - name: Show the discovered version
         run: |
@@ -232,6 +232,7 @@ jobs:
 
           sshpass -e sftp -oBatchMode=no -b - ${{ secrets.SF_USERNAME }}@${{ secrets.SF_HOST }} << EOF
             cd /home/frs/project/phplist/$RELEASE_FOLDER
+            binary
             mkdir $RELEASE_VERSION
             cd $RELEASE_VERSION
             put phplist-${RELEASE_VERSION}.*
