--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -218,6 +218,14 @@ jobs:
           s3cmd put phplist-${RELEASE_VERSION}.* s3://${{ secrets.AWS_S3_VERSIONS_BUCKET }}/
           s3cmd put phplist3/public_html/lists/admin/images/power-phplist.png s3://${{ secrets.AWS_S3_POWERED_BUCKET }}/images/${RELEASE_VERSION}/
 
+      - name: Upload the package as artifact
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          path: "phplist-${RELEASE_VERSION}.tgz"
+          name: "tgzip"
+          retention-days: 3
+
       - name: Upload the files to SF
         run: |
           export SSHPASS=${{ secrets.SF_PASS }}
@@ -232,7 +240,6 @@ jobs:
 
           sshpass -e sftp -oBatchMode=no -b - ${{ secrets.SF_USERNAME }}@${{ secrets.SF_HOST }} << EOF
             cd /home/frs/project/phplist/$RELEASE_FOLDER
-            binary
             mkdir $RELEASE_VERSION
             cd $RELEASE_VERSION
             put phplist-${RELEASE_VERSION}.*
