--- a/docker/docker-apache-phplist.conf
+++ b/docker/docker-apache-phplist.conf
@@ -9,5 +9,13 @@ ServerName phplist.docker
 
         <Directory /var/www/phpList3>
           AllowOverride All
+          Options -Indexes
         </Directory>
+
+        LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
+        LogFormat "%{X-Forwarded-For}i %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" proxy
+        SetEnvIf X-Forwarded-For "^.*\..*\..*\..*" forwarded
+        CustomLog /proc/self/fd/1 combined env=!forwarded
+        CustomLog /proc/self/fd/1 proxy env=forwarded
+        ErrorLog /proc/self/fd/1
 </VirtualHost>
