--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -263,6 +263,6 @@ jobs:
           push: true
           no-cache: true
           file: Dockerfile.release
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/phplist-dev:${{ env.RELEASE_VERSION }}
+          tags: ${{ secrets.DOCKERHUB_REPO }}/${{ secrets.DOCKERHUB_IMAGE }}:${{ env.RELEASE_VERSION }}
           build-args: |
             VERSION=${{ env.RELEASE_VERSION }}
