--- a/tests/ci/behat.yml
+++ b/tests/ci/behat.yml
@@ -54,12 +54,12 @@ default:
           selenium2:
             browser: "firefox"
             wd_host: http://127.0.0.1:4444/wd/hub
-    # FailAid\Extension: 
-    #   screenshot:
-    #     directory: ./output/screenshots/
-    #     mode: default
-    #     autoClean: false
-    #     size: 1444x1280
+    FailAid\Extension: 
+      screenshot:
+        directory: ./output/screenshots/
+        mode: default
+        autoClean: false
+        size: 1444x1280
     Bex\Behat\ScreenshotExtension:
       active_image_drivers: [local]
       image_drivers:
