--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,6 +52,20 @@ jobs:
           php_extensions: xml 
           version: 2
 
+      - name: Report Versions
+        run: |
+          google-chrome --version
+          lsb_release -a
+          php -v
+          chromedriver -v
+          geckodriver -V
+          which geckodriver
+          which chromedriver
+          firefox -v
+          vendor/bin/behat -V
+          mysql --version
+          mysqladmin --version
+
       - name: Create Database
         run: |
           sudo systemctl start mysql.service
@@ -84,17 +98,6 @@ jobs:
         with:
           path: ./public_html
           
-      - name: Report Versions
-        run: |
-          google-chrome --version
-          php -v
-          chromedriver -v
-          geckodriver -V
-          which geckodriver
-          which chromedriver
-          firefox -v
-          vendor/bin/behat -V
-
       - name: Run BDD Tests UI
         run: |
           cd $GITHUB_WORKSPACE/tests
