--- a/composer.json
+++ b/composer.json
@@ -126,13 +126,11 @@
     "phplist/phplist-plugin-subjectlineplaceholders": "dev-master"
   },
   "require-dev": {
-    "behat/mink": "@stable",
-    "behat/mink-goutte-driver": "@stable",
-    "behat/mink-selenium2-driver": "^1.3",
-    "behat/behat": "3.5.0",
-    "behat/mink-extension": "^2.2",
-    "fabpot/goutte": "@stable",
-    "symfony/config": "3.0",
+    "behat/behat": "@stable",
+    "behat/mink-selenium2-driver": "@stable",
+    "friends-of-behat/mink": "@stable",
+    "friends-of-behat/mink-extension": "^2.7",
+    "symfony/config": "@stable",
     "se/selenium-server-standalone": "^2.52",
     "bex/behat-screenshot": "^1.2",
     "zbateson/mail-mime-parser": "^1.1",
