use env secret to set test or prod

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -3,7 +3,8 @@ name: Build Release
 
 on:
   push:
-    tags: ${{ variables.BUILD_TAGS }}
+    tags: v[1-9]+.[0-9]+.*
+
 
 jobs:
   test:
@@ -24,8 +25,8 @@ jobs:
 
       - name: Show the discovered version
         run: |
-          if [[ $RELEASE_VERSION = "refs/heads/master" ]]; then
-            echo "RELEASE_VERSION=testing-RC1" >> $GITHUB_ENV
+          if [[ ${{ secrets.BUILD_TEST }} ]]; then
+            echo "RELEASE_VERSION=build-testing-RC1" >> $GITHUB_ENV
           fi
           echo \$RELEASE_VERSION = $RELEASE_VERSION
           echo \$\{\{ env.RELEASE_VERSION \}\} = ${{ env.RELEASE_VERSION }}
