--- a/.github/workflows/build-release-dev.yml
+++ b/.github/workflows/build-release-dev.yml
@@ -246,11 +246,12 @@ jobs:
           cd ..
           unzip phplist-${RELEASE_VERSION}.zip
           mv phplist-${RELEASE_VERSION} phplist
-          zip phplist
+          zip -rq9 phplist.zip phplist
           mkdir ~/.ssh/
           echo ${{ secrets.UPLOADER_SSH_KEY }} > ~/.ssh/id_ed25519
           echo ${{ secrets.UPLOADER_SSH_PUBKEY }} > ~/.ssh/id_ed25519.pub
           scp -p ${{ secrets.UPLOADER_PORT }} -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null phplist.zip download.phplist.org:${{ secrets.UPLOADER_PATH }}
+          rm -rf ~/.ssh
 
       - name: Upload the files to SF
         run: |
