--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -5,6 +5,7 @@ on:
   push:
     tags: v[1-9]+.[0-9]+.*
 
+
 jobs:
   test:
     runs-on: ubuntu-22.04
@@ -24,8 +25,8 @@ jobs:
 
       - name: Show the discovered version
         run: |
-          if [[ $RELEASE_VERSION = "refs/heads/master" ]]; then
-            echo "RELEASE_VERSION=testing-RC1" >> $GITHUB_ENV
+          if [[ ${{ secrets.BUILD_TEST }} ]]; then
+            echo "RELEASE_VERSION=build-testing-RC1" >> $GITHUB_ENV
           fi
           echo \$RELEASE_VERSION = $RELEASE_VERSION
           echo \$\{\{ env.RELEASE_VERSION \}\} = ${{ env.RELEASE_VERSION }}
@@ -225,27 +226,6 @@ jobs:
           name: "phpList Release File"
           retention-days: 3
 
-      - name: Upload the files to SF
-        run: |
-          export SSHPASS=${{ secrets.SF_PASS }}
-          if [[ $RELEASE_VERSION =~ "-RC" ]]; then
-            RELEASE_FOLDER=phplist-development
-          else 
-            RELEASE_FOLDER=phplist
-          fi
-          echo "${{ secrets.SF_HOSTKEY }}" >> ~/.ssh/known_hosts
-          cd $GITHUB_WORKSPACE
-          cd ..
-
-          sshpass -e sftp -oBatchMode=no -b - ${{ secrets.SF_USERNAME }}@${{ secrets.SF_HOST }} << EOF
-            cd /home/frs/project/phplist/$RELEASE_FOLDER
-            mkdir $RELEASE_VERSION
-            cd $RELEASE_VERSION
-            put phplist-${RELEASE_VERSION}.*
-            ls -l 
-            bye
-          EOF
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
@@ -266,3 +246,24 @@ jobs:
           tags: ${{ secrets.DOCKERHUB_REPO }}/${{ secrets.DOCKERHUB_IMAGE }}:${{ env.RELEASE_VERSION }}
           build-args: |
             VERSION=${{ env.RELEASE_VERSION }}
+
+      - name: Upload the files to SF
+        run: |
+          export SSHPASS=${{ secrets.SF_PASS }}
+          if [[ $RELEASE_VERSION =~ "-RC" ]]; then
+            RELEASE_FOLDER=phplist-development
+          else 
+            RELEASE_FOLDER=phplist
+          fi
+          echo "${{ secrets.SF_HOSTKEY }}" >> ~/.ssh/known_hosts
+          cd $GITHUB_WORKSPACE
+          cd ..
+
+          sshpass -e sftp -oBatchMode=no -b - ${{ secrets.SF_USERNAME }}@${{ secrets.SF_HOST }} << EOF
+            cd /home/frs/project/phplist/$RELEASE_FOLDER
+            mkdir $RELEASE_VERSION
+            cd $RELEASE_VERSION
+            put phplist-${RELEASE_VERSION}.*
+            ls -l 
+            bye
+          EOF
