--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,14 +11,10 @@ jobs:
     strategy:
       fail-fast: false     
       matrix:   
-        php-version: ['7.4', '8.0', '8.1']
+        php-version: ['7.4', '8.0', '8.1','8.2']
         experimental: [false]
         include:
-          - php-version: 7.2
-            experimental: true
-          - php-version: 7.3
-            experimental: true
-          - php-version: 8.2
+          - php-version: 8.3
             experimental: true
 
     steps:
