--- a/tests/ci/behat.yml
+++ b/tests/ci/behat.yml
@@ -56,7 +56,7 @@ default:
             wd_host: http://127.0.0.1:4444/wd/hub
     FailAid\Extension: 
       screenshot:
-        directory: ./output/screenshots/
+        directory: output/screenshots/
         mode: default
         autoClean: false
         size: 1444x1280
