copy screenshot from tmp to artifact dir

--- a/.github/workflows/upgrade.yml
+++ b/.github/workflows/upgrade.yml
@@ -98,6 +98,7 @@ jobs:
         run: |
           cd $GITHUB_WORKSPACE/tests
           ../vendor/bin/behat -p chrome -f progress --tags="~@initialise && ~@wip"
+          cp /tmp/*.png output/screenshots
 
       - name: Reset Database
         run: |
