be less verbose

--- a/.github/workflows/upgrade.yml
+++ b/.github/workflows/upgrade.yml
@@ -119,7 +119,7 @@ jobs:
           export ADMIN_NAME="phpList Administrator"
           php public_html/lists/admin/index.php -c $GITHUB_WORKSPACE/public_html/lists/config/config.php -p initialise -f
           cd $GITHUB_WORKSPACE/tests
-          ../vendor/bin/behat -p chrome --tags="~@initialise && ~@wip"
+          ../vendor/bin/behat -p chrome -f progress --tags="~@initialise && ~@wip"
 
       - name: copy screenshots
         if: always()
@@ -127,6 +127,7 @@ jobs:
           cd $GITHUB_WORKSPACE
           images=$(ls -l /tmp/*.png 2>/dev/null | wc -l)
           [[ $images -gt 0 ]] && cp -v /tmp/*.png output/screenshots
+          exit 0;
 
       - name: Upload the screenshots
         if: always()
